--- a/assets/admin.css
+++ b/assets/admin.css
@@ -681,6 +681,13 @@ body.toplevel_page_a11y-toolbox-pro #adminmenu .wp-submenu {
   flex-basis: 100%;
 }
 
+.a11ytb-admin-llava {
+  margin: 0;
+  font-size: 12px;
+  color: var(--a11ytb-admin-muted);
+  flex-basis: 100%;
+}
+
 .a11ytb-sr-only {
   position: absolute;
   width: 1px;
